# DancherLink

./: .gitignore  CMakeLists.txt  DancherLink_resource.rc  Directory.Build.targets  Makefile  Makefile.Debug  Makefile.Release  README.md  build.err  build2.err  build3.err  build4.err  full_log.txt  qml_qmlcache.qrc  test_qmake.pro  updates.json
.github/workflows/: build-win-mac.yml  build-windows.yml  build.yml
AntiHooking/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  antihookingprotection.cpp
app/: CMakeLists.txt  DancherLink.exe.manifest  DancherLink_resource.rc  Info.plist  Makefile  Makefile.Debug  Makefile.Release  app.pro  dancherlink.icns  main.cpp  resources.qrc  version.txt
app/backend/: autoupdatechecker.cpp  autoupdatechecker.h  boxartmanager.cpp  boxartmanager.h  computermanager.cpp  computermanager.h  nvcomputer.cpp  nvcomputer.h  nvhttp.cpp  nvhttp.h  nvpairingmanager.cpp
app/cli/: commandlineparser.cpp
app/deploy/linux/: com.dancher_stream.DancherLink.appdata.xml  com.dancher_stream.DancherLink.desktop
app/deploy/steamlink/: toc.txt
app/gui/: AppView.qml  AutoResizingComboBox.qml  CenteredGridView.qml  CliPair.qml  CliQuitStreamSegue.qml  CliStartStreamSegue.qml  ErrorMessageDialog.qml  GamepadMapper.qml  NavigableDialog.qml  NavigableItemDelegate.qml  NavigableMenu.qml  NavigableMenuItem.qml  NavigableMessageDialog.qml  NavigableToolButton.qml  PcView.qml  QuitSegue.qml  SettingsView.qml  StreamSegue.qml  appmodel.cpp  appmodel.h  computermodel.cpp  computermodel.h  main.qml
app/languages/: qml_zh_CN.qm
app/release/: boxartmanager.moc  computermanager.moc  gui_AutoResizingComboBox_qml.cpp  gui_CliQuitStreamSegue_qml.cpp  gui_NavigableDialog_qml.cpp  gui_NavigableItemDelegate_qml.cpp  gui_NavigableMenuItem_qml.cpp  gui_NavigableMenu_qml.cpp  gui_NavigableMessageDialog_qml.cpp  gui_NavigableToolButton_qml.cpp  gui_StreamSegue_qml.cpp  moc_appmodel.cpp  moc_autoupdatechecker.cpp  moc_boxartmanager.cpp  moc_compatfetcher.cpp  moc_computermanager.cpp  moc_computermodel.cpp  moc_computerseeker.cpp  moc_listapps.cpp  moc_mappingfetcher.cpp  moc_micstream.cpp  moc_nvhttp.cpp  moc_pair.cpp  moc_quitstream.cpp  moc_sdlgamepadkeynavigation.cpp  moc_session.cpp  moc_startstream.cpp  moc_streamingpreferences.cpp  moc_systemproperties.cpp  qrc_qml_qmlcache.cpp
app/settings/: streamingpreferences.cpp  streamingpreferences.h
app/streaming/: micstream.cpp  micstream.h  session.cpp  session.h  streamutils.cpp
app/streaming/audio/renderers/: sdlaud.cpp  slaud.cpp  soundioaudiorenderer.cpp
app/streaming/input/: keyboard.cpp
app/streaming/video/: decoder.h  ffmpeg.cpp  ffmpeg.h  overlaymanager.cpp  overlaymanager.h
app/streaming/video/ffmpeg-renderers/: d3d11va.cpp  d3d11va.h
app/streaming/video/ffmpeg-renderers/pacer/: pacer.cpp  pacer.h
config.tests/SL/: Makefile
debug/: object_script.Moonlight.Debug
h264bitstream/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release
h264bitstream/h264bitstream/: h264_stream.c  h264_stream.in.c
libs/windows/include/arm64/: SDL_config.h  SDL_revision.h
libs/windows/include/arm64/openssl/: configuration.h
libs/windows/include/x64/: SDL_config.h
libs/windows/include/x64/libplacebo/: config.h
libs/windows/include/x64/openssl/: configuration.h
moonlight-common-c/: Makefile  Makefile.Debug  Makefile.Release
moonlight-common-c/debug/: object_script.moonlight-common-c.Debug
moonlight-common-c/moonlight-common-c/: CMakeLists.txt
moonlight-common-c/moonlight-common-c/enet/: host.c  peer.c  protocol.c
moonlight-common-c/release/: object_script.moonlight-common-c.Release
qmdnsengine/: Makefile  Makefile.Debug  Makefile.Release
qmdnsengine/debug/: object_script.qmdnsengine.Debug
qmdnsengine/qmdnsengine/: CMakeLists.txt
qmdnsengine/release/: moc_abstractserver.cpp  moc_browser.cpp  moc_browser_p.cpp  moc_cache.cpp  moc_cache_p.cpp  moc_hostname.cpp  moc_hostname_p.cpp  moc_prober.cpp  moc_prober_p.cpp  moc_provider.cpp  moc_provider_p.cpp  moc_resolver.cpp  moc_resolver_p.cpp  moc_server.cpp  moc_server_p.cpp  object_script.qmdnsengine.Release
release/: computermodel.moc  gui_AppView_qml.cpp  gui_CenteredGridView_qml.cpp  gui_CliPair_qml.cpp  gui_CliStartStreamSegue_qml.cpp  gui_ErrorMessageDialog_qml.cpp  gui_GamepadMapper_qml.cpp  gui_PcView_qml.cpp  gui_QuitSegue_qml.cpp  gui_SettingsView_qml.cpp  gui_main_qml.cpp  moc_appmodel.cpp  moc_autoupdatechecker.cpp  moc_boxartmanager.cpp  moc_compatfetcher.cpp  moc_computermanager.cpp  moc_computermodel.cpp  moc_computerseeker.cpp  moc_listapps.cpp  moc_mappingfetcher.cpp  moc_micstream.cpp  moc_nvhttp.cpp  moc_pair.cpp  moc_quitstream.cpp  moc_sdlgamepadkeynavigation.cpp  moc_session.cpp  moc_startstream.cpp  moc_streamingpreferences.cpp  moc_systemproperties.cpp  object_script.Moonlight.Release
scripts/: build-appimage.sh  build-arch.bat  build-steamlink-app.sh  generate-bundle.bat  generate-dmg.sh  generate-ico.sh  generate-src.sh  repair-submodules.bat  update_rc_version.ps1
server/: update_version.py  updates.json
test_dir/: .qmake.conf  test.pro
tools/icon_updater/: README.md  update_icons.py
wix/: DancherLink.sln
wix/DancherLink/: DancherLink.wixproj  Product.wxs
wix/DancherLinkSetup/: Bundle.wxs  DancherLinkSetup.wixproj
